k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techie-d
  namespace: static
  labels:
    app: techie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techie
  template:
    metadata:
      labels:
        app: techie
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: techie
        image: nheek/techie:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "30Mi"
