k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techie-service
  namespace: static
  labels:
    app: techie
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: techie
