k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techie-ingress
  namespace: static
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: techie.nheek.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techie-service
            port:
              number: 80
  - host: techie.nheek.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techie-service
            port:
              number: 80
